# stera-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/stera/: __init__.py
src/stera/annotations/: __init__.py
src/stera/annotations/hands/: __init__.py  hand.py
src/stera/annotations/pose/: __init__.py  body.py  camera.py
src/stera/core/: __init__.py  io.py  transforms.py  types.py
src/stera/data/: __init__.py  export.py
src/stera/data/mcap/: __init__.py  _compat.py  _decoders.py  _reader.py  _session.py  _sync.py
src/stera/eval/: __init__.py  config.py  evaluate.py  metrics.py  plots.py  report.py
src/stera/models/: __init__.py
src/stera/models/egoblur/: __init__.py  blur.py  config.py
src/stera/models/hamer/: __init__.py  config.py  tracker.py
src/stera/models/mediapipe/: __init__.py  config.py  tracker.py
src/stera/models/mediapipe_face/: __init__.py  blur.py  config.py
src/stera/models/retinaface/: __init__.py  blur.py  config.py
src/stera/models/skeleton/: __init__.py  estimator.py
src/stera/models/wilor/: __init__.py  config.py  constants.py  tracker.py
src/stera/processing/: __init__.py  mesh.py
src/stera/utils/: __init__.py  face_blur.py
src/stera/viz/: __init__.py  log_annotations.py  logger.py  session.py
tests/: test_depth_anchoring.py
